corrected alignment and placement of labels

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ header {
     color: whitesmoke;
     display: flex;
     flex-direction: column;
-    flex-basis: 35rem;
+    flex-basis: 30rem;
     flex-grow: 1;
     align-items: center;
     justify-content: space-between;
@@ -62,7 +62,7 @@ header {
 }
 
 main {
-    flex-basis: 70%;
+    flex-basis: 60rem;
     flex-grow: 9999;
     font-family: sans-serif;
     background-color: hsl(0, 0%, 95%);
@@ -100,9 +100,15 @@ main > * {
     font-size: 1.5rem;
     margin-bottom: 2em;
     align-items: flex-end;
-    padding: 2em;
+    padding: 2em 2em 2em 48px;
     padding-bottom: 0em;
     background-color: hsl(0, 0%, 95%);
+}
+
+legend {
+  font-weight: 600;
+  font-size: 1.5rem;
+
 }
 
 p {
@@ -118,10 +124,33 @@ input {
   width: 300px;
 }
 
+label {
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  font-weight: 600;
+  font-size: .75rem;
+}
+
+form p {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+p span {
+  display: flex;
+  flex-direction: column;
+  max-width: 550px;
+  flex-shrink: 1;
+  flex-grow: 1;
+  flex-basis: 330px;
+}
+
+span {
+  margin-top: 1.5em;
+}
 
 .shadow {
-  padding: 2em;
-  padding-bottom: 0;
+  padding: 1em 2em 4em 48px;
   background-color: white;
   box-shadow: 0px 4px hsla(0, 0%, 0%, 0.10);
   width: 100%;
@@ -138,10 +167,10 @@ button {
   border: none;
   box-shadow: 2px 5px 4px 4px hsla(0, 0%, 0%, 0.10);
   cursor: pointer;
-  margin-left: 2em;
+  margin-left: 48px;
 }
 
 .bottom-content {
-  padding: 1em 2em;
+  padding: 1em 48px;
   font-size: 1rem;
 }
